src/assets/styles/components/_status.scss
@use "../helpers/mixin";

.status {
  $this: &;

  --ds-status-circle-size-lg: var(--size-8);
  --ds-status-circle-size-sm: var(--size-6);

  --ds-status-circle-bg-primary: var(--grey-700);
  --ds-status-circle-bg-information: var(--blue-800);
  --ds-status-circle-bg-brand: var(--brand-700);
  --ds-status-circle-bg-danger: var(--red-800);
  --ds-status-circle-bg-warning: var(--yellow-800);
  --ds-status-circle-bg-success: var(--green-600);
  --ds-status-circle-bg-discovery: var(--purple-400);
  --ds-status-circle-bg-disabled: var(--grey-500);


  --ds-status-withBackground-bg-primary: var(--grey-50);
  --ds-status-withBackground-bg-information: var(--blue-50);
  --ds-status-withBackground-bg-brand: var(--brand-20);
  --ds-status-withBackground-bg-danger: var(--red-20);
  --ds-status-withBackground-bg-warning:var(--yellow-50);
  --ds-status-withBackground-bg-success: var(--green-50);
  --ds-status-withBackground-bg-discovery:var(--purple-50);
  --ds-status-withBackground-bg-disabled:var(--grey-30);


  @include mixin.inline-flex;
  @include mixin.align-items(center);
  &__label{
   .status__label-text{
     white-space: nowrap;
   }
  }
  &__circle {
    display: block;
    border-radius: var(--border-radius-percent-100);
    width: var(--ds-status-circle-size-lg);
    min-width: var(--ds-status-circle-size-lg);
    height: var(--ds-status-circle-size-lg);
  }
  &__circle--primary {
    background-color: var(--ds-status-circle-bg-primary);
  }
  &__circle--information {
    background-color: var(--ds-status-circle-bg-information);
  }
  &__circle--brand {
    background-color: var(--ds-status-circle-bg-brand);
  }
  &__circle--danger {
    background-color: var(--ds-status-circle-bg-danger);
  }
  &__circle--success {
    background-color: var(--ds-status-circle-bg-success);
  }
  &__circle--warning {
    background-color: var(--ds-status-circle-bg-warning);
  }
  &__circle--discovery {
    background-color: var(--ds-status-circle-bg-discovery);
  }
  &__circle--disabled {
    background-color: var(--ds-status-circle-bg-disabled);
  }

  &__withBackground{
    padding: 4px 12px 4px 10px;
    border-radius: var(--border-radius-24)
  }
  &__withBackground--primary {
    background-color: var(--ds-status-withBackground-bg-primary);
    border: var(--border-size-1) solid var(--grey-500);
  }
  &__withBackground--information {
    background-color: var(--ds-status-withBackground-bg-information);
    border: var(--border-size-1) solid var(--blue-600);
  }
  &__withBackground--brand {
    background-color: var(--ds-status-withBackground-bg-brand);
    border: var(--border-size-1) solid var(--brand-500);
  }
  &__withBackground--danger {
    background-color: var(--ds-status-withBackground-bg-danger);
    border: var(--border-size-1) solid var(--red-500);
  }
  &__withBackground--success {
    background-color: var(--ds-status-withBackground-bg-success);
    border: var(--border-size-1) solid var(--green-600)
  }
  &__withBackground--warning {
    background-color: var(--ds-status-withBackground-bg-warning);
    border: var(--border-size-1) solid var(--yellow-500);
  }
  &__withBackground--discovery {
    background-color: var(--ds-status-withBackground-bg-discovery);
    border: var(--border-size-1) solid var(--purple-400);
  }
  &__withBackground--disabled {
    background-color: var(--ds-status-withBackground-bg-disabled);
    border: var(--border-size-1) solid var(--grey-50);
  }

  &--small {
    #{$this}__circle {
      width: var(--ds-status-circle-size-sm);
      min-width: var(--ds-status-circle-size-sm);
      height: var(--ds-status-circle-size-sm);
    }
  }
}
[data-theme="dark"] {
  .status {
    --ds-status-withBackground-bg-disabled: var(--grey-50);

    &__withBackground--disabled {
      border-color: var(--grey-50);
    }
  }
}

